one more commit

--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- TODO: Set the document title to the name of your application -->
   <title>VertexMediaHouse</title>
-  <meta name="description" content="Lovable Generated Project" />
-  <meta name="author" content="Lovable" />
+  <meta name="description" content="VertexMediaHouse main website" />
+  <meta name="author" content="Faiz Rajput" />
 
   <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="Lovable App" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:title" content="VertexMediaHouse Website" />
+  <meta property="og:description" content="Faiz Rajput Generated Project" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="instagram:site" content="@faiz_rajput_15" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
