Website update by Ismail

--- a/index.html
+++ b/index.html
@@ -4,25 +4,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- TODO: Set the document title to the name of your application -->
-  <title>VertexMediaHouse</title>
-  <meta name="description" content="VertexMediaHouse main website" />
-  <meta name="author" content="Faiz Rajput" />
+  
+  <!-- Primary Meta Tags -->
+  <title>Vertex Media House | Creative Solutions for Brands & Creators</title>
+  <meta name="title" content="Vertex Media House | Creative Solutions for Brands & Creators" />
+  <meta name="description" content="Creative solutions for brands and creators that move fast and scale smarter. Expert pitch deck design, video editing, website development, and AI automation services." />
+  <meta name="keywords" content="pitch deck design, video editing, website design, AI automation, creative agency, branding, digital marketing" />
+  <meta name="author" content="Vertex Media House" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#ff4d31" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-  <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="VertexMediaHouse Website" />
-  <meta property="og:description" content="Faiz Rajput Generated Project" />
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:url" content="https://vertexmedia.house/" />
+  <meta property="og:title" content="Vertex Media House | Creative Solutions for Brands & Creators" />
+  <meta property="og:description" content="Creative solutions for brands and creators that move fast and scale smarter. Expert pitch deck design, video editing, website development, and AI automation services." />
+  <meta property="og:image" content="https://vertexmedia.house/og-image.png" />
+  <meta property="og:site_name" content="Vertex Media House" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="instagram:site" content="@faiz_rajput_15" />
+  <meta name="twitter:url" content="https://vertexmedia.house/" />
+  <meta name="twitter:title" content="Vertex Media House | Creative Solutions for Brands & Creators" />
+  <meta name="twitter:description" content="Creative solutions for brands and creators that move fast and scale smarter." />
+  <meta name="twitter:image" content="https://vertexmedia.house/og-image.png" />
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap"
-    rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 
 
