Updated other pages (Ismail)

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- Primary Meta Tags -->
   <title>Vertex Media House | Creative Solutions for Brands & Creators</title>
   <meta name="title" content="Vertex Media House | Creative Solutions for Brands & Creators" />
-  <meta name="description" content="Creative solutions for brands and creators that move fast and scale smarter. Expert pitch deck design, video editing, website development, and AI automation services." />
-  <meta name="keywords" content="pitch deck design, video editing, website design, AI automation, creative agency, branding, digital marketing" />
+  <meta name="description"
+    content="Creative solutions for brands and creators that move fast and scale smarter. Expert pitch deck design, video editing, website development, and AI automation services." />
+  <meta name="keywords"
+    content="pitch deck design, video editing, website design, AI automation, creative agency, branding, digital marketing" />
   <meta name="author" content="Vertex Media House" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#ff4d31" />
-  
+
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -22,7 +24,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://vertexmedia.house/" />
   <meta property="og:title" content="Vertex Media House | Creative Solutions for Brands & Creators" />
-  <meta property="og:description" content="Creative solutions for brands and creators that move fast and scale smarter. Expert pitch deck design, video editing, website development, and AI automation services." />
+  <meta property="og:description"
+    content="Creative solutions for brands and creators that move fast and scale smarter. Expert pitch deck design, video editing, website development, and AI automation services." />
   <meta property="og:image" content="https://vertexmedia.house/og-image.png" />
   <meta property="og:site_name" content="Vertex Media House" />
 
@@ -30,20 +33,27 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://vertexmedia.house/" />
   <meta name="twitter:title" content="Vertex Media House | Creative Solutions for Brands & Creators" />
-  <meta name="twitter:description" content="Creative solutions for brands and creators that move fast and scale smarter." />
+  <meta name="twitter:description"
+    content="Creative solutions for brands and creators that move fast and scale smarter." />
   <meta name="twitter:image" content="https://vertexmedia.house/og-image.png" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet">
 </head>
 
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <!-- ElevenLabs ConvAI Widget -->
+  <elevenlabs-convai agent-id="agent_4601kg1g4w1mf0vs3e1wpc82kq51"></elevenlabs-convai>
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 </body>
 
 </html>
